tests/snapshots/run_wpt_conformance__litert_linear_float32_negative_4D_tensor_specified_negative_options_beta_and_default_options_alpha.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "linear.https.any.js",
    "linear float32 negative 4D tensor specified negative options.beta and default options.alpha",
    "litert",
    "PASS",
)
