tests/snapshots/run_wpt_conformance__litert_log_float16_positive_0D_scalar.snap
---
source: tests/run_wpt_conformance.rs
assertion_line: 69
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
log.https.any.js log float16 positive 0D scalar, litert
 Failed to dispatch graph: LiteRT status error: code=3

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    logInput: f16[];
  }

  nodes {
    [logOutput] = log(logInput, label="");
  }

  outputs { logOutput; }
}
